@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="poker-client.xsd" ping="240" verbose="0" delays="true" poker_network_version="1.0.19">
+<settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="poker-client.xsd" ping="240" verbose="0" delays="true" poker_network_version="1.0.20">
   <delays sit="1" blind_ante_position="0.5" position="2" begin_round="1" end_round="1" end_round_last="1" showdown="6" lag="15"/>
   <name>username</name>
   <passwd>password</passwd>
